# ChangeLog for dev-python/lettuce
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*lettuce-0.2.6 (31 Jul 2012)

  31 Jul 2012; James Rowe <jnrowe@gmail.com> +lettuce-0.2.6.ebuild:
  Version bump [630].

  16 Jul 2012; James Rowe <jnrowe@gmail.com> -lettuce-0.1.35.ebuild,
  lettuce-0.2.1.ebuild:
  Keyworded x86.

  16 Jul 2012; James Rowe <jnrowe@gmail.com> lettuce-0.2.1.ebuild:
  Keyworded amd64.

  15 Jun 2012; James Rowe <jnrowe@gmail.com> lettuce-0.2.1.ebuild:
  Added missing fuzzywuzzy dependency.

*lettuce-0.2.1 (15 Jun 2012)

  15 Jun 2012; James Rowe <jnrowe@gmail.com> +lettuce-0.2.1.ebuild:
  Version bump [618].

  07 May 2012; James Rowe <jnrowe@gmail.com> -lettuce-0.1.34.ebuild,
  lettuce-0.1.35.ebuild:
  Keyworded x86.

  07 May 2012; James Rowe <jnrowe@gmail.com> lettuce-0.1.35.ebuild:
  Keyworded amd64.

  09 Apr 2012; James Rowe <jnrowe@gmail.com> lettuce-0.1.34.ebuild:
  src_install default hack now in jnrowe-pypi eclass.

  08 Apr 2012; James Rowe <jnrowe@gmail.com> lettuce-0.1.34.ebuild,
  lettuce-0.1.35.ebuild:
  Switched to python-distutils-ng eclass.

*lettuce-0.1.35 (07 Apr 2012)

  07 Apr 2012; James Rowe <jnrowe@gmail.com> +lettuce-0.1.35.ebuild:
  Version bump [582].

  19 Mar 2012; James Rowe <jnrowe@gmail.com> lettuce-0.1.34.ebuild:
  Switched to EAPI4.

  14 Mar 2012; James Rowe <jnrowe@gmail.com> lettuce-0.1.34.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> lettuce-0.1.34.ebuild:
  Removed Python 2.4 support.

  02 Mar 2012; James Rowe <jnrowe@gmail.com> lettuce-0.1.34.ebuild:
  Keyworded amd64.

  02 Mar 2012; James Rowe <jnrowe@gmail.com> -lettuce-0.1.33.ebuild,
  lettuce-0.1.34.ebuild:
  Keyworded x86.

*lettuce-0.1.34 (01 Feb 2012)

  01 Feb 2012; James Rowe <jnrowe@gmail.com> +lettuce-0.1.34.ebuild:
  Version bump [532].

  18 Nov 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.32.ebuild,
  lettuce-0.1.33.ebuild:
  Keyworded x86.
