@@ -11,4 +11,4 @@ REQUIRED_USE=|| ( python_targets_python2_5 python_targets_python2_6 python_targe
 SLOT=0
 SRC_URI=mirror://pypi/l/lettuce/lettuce-0.2.6.tar.gz
 _eclasses_=base	d40e074a6349af3ea5e937210630bdc1	eutils	327b713e2d6949c42cd96bc4898fd280	jnrowe-pypi	686cf6e0feaf26499041ad17392c3774	multilib	5782800349f728f725f9378105c6a2ab	python-distutils-ng	6786a3ab681bb2f21310183278f72e33	toolchain-funcs	d3b5812eeab360bc41aa48b6cdbbc142	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=9c71aafd78ae191c785ae9125e518c31
+_md5_=ba48b5e5879e48ec6ca03ac04cace12a
